feat: 一些功能的修改与界面的修改，使用qiankun改造成可以单独运行或者嵌入的微应用

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "bpmn-js": "^8.1.0",
     "bpmn-js-properties-panel": "^0.39.0",
     "codemirror": "^5.59.2",
     "element-plus": "^2.1.0",
+    "vite-plugin-qiankun": "^1.0.15",
     "vue": "^3.3.4"
   },
   "devDependencies": {
