--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-job:       # This job runs in the build stage, which runs first.
   script:
     - yarn install
     - echo "building the code..."
-    - yarn build
+    - yarn dev
     - echo "Compile complete."
     - echo "deploy config -- ${deploy_user}@${deploy_host}"
     - echo "copying dist to deploy directory..."
