--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@element-plus/icons-vue": "^2.3.1",
     "bpmn-js": "^8.1.0",
     "bpmn-js-properties-panel": "^0.39.0",
+    "bpmn-js-token-simulation": "^0.33.1",
     "codemirror": "^5.59.2",
+    "diagram-js-minimap": "^4.1.0",
     "element-plus": "^2.1.0",
     "vite-plugin-qiankun": "^1.0.15",
     "vue": "^3.3.4"
